--- a/html/index.html
+++ b/html/index.html
@@ -1,6 +1,7 @@
 <html lang = es >
 <head>
   <meta charset="utf-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mobiles</title>
   <link rel="icon" href="favicon/redax.png"/> <!-- cambiar icono -->
   <link rel="stylesheet" type="text/css" href="../css/normalize.css">
@@ -17,7 +18,7 @@
 			</div>
 			<div class="header__botones">
 				<div class = "header__boton-carrito">
-					<img src="../imagenes/icono-carrito-de-compra.jpg">
+					<img src="../imagenes/icono-carrito-de-compra.svg">
 			  </div>
 			  <div class = "header__boton-menu">
 				  <img src="../imagenes/icono-menu.svg">
@@ -40,7 +41,31 @@
 					</div>
 				</div>
 				<div class="portada-1__seccion-3__caracteristicas">
-					<h3>Características</h3>
+					<div class = "portada-1__seccion-3__caracteristicas-desplegable">
+						<select>
+		                    
+                            <optgroup label="Procesador:"disabled> 
+                            	<option>Qualcomm® Snapdragon™ 732G"</option></optgroup>
+                            <optgroup label ="Almacenamiento y RAM:" disabled>
+                            	<option><p>RAM: 6  Almacenamiento: 64 GB / 128 GB"</p></option>
+                            </optgroup>
+                            <optgroup label ="Pantalla:" disabled>
+                            	<option>6.67" DotDisplay</option>
+                            </optgroup>
+                            <optgroup label="Procesador:"disabled> 
+                            	<option>Qualcomm® Snapdragon™ 732G"</option></optgroup>
+                            <optgroup label ="Almacenamiento y RAM:" disabled>
+                            	<option><p>RAM: 6  Almacenamiento: 64 GB / 128 GB"</p></option>
+                            </optgroup>
+                            <optgroup label ="Pantalla:" disabled>
+                            	<option>6.67" DotDisplay</option>
+                            </optgroup>
+
+
+                      </select>
+						<h3>Características</h3>
+					</div>
+					
 				</div>
 			</div>
 			
@@ -49,6 +74,7 @@
 	<footer>
 		<op>Lorem	</op> 
 	</footer>
+	
 
 </body>
 </html>
