seccion-catalogo-sin-terminar

--- a/html/index.html
+++ b/html/index.html
@@ -25,6 +25,9 @@
 			  </div>
 			</div>
 		</header>
+		<div class="productos-destacados">
+			<h2>Productos destacados</h2>
+		</div>
 		<div class="portada-1">
 			<div class="portada-1__seccion-1">
 				<div class="portada-1__seccion-1__nombre-celular">
@@ -35,6 +38,9 @@
 				<p>Aquí va la imagen del celular</p>
 			</div>
 			<div class="portada-1__seccion-3">
+				<div class="portada-1__seccion-3-precio">
+					<h2>$ 1.200.000 </h2>
+				</div>
 				<div class="portada-1__seccion-3__botoncomprar">
 					<div>
 						<h3>Comprar</h3>
@@ -68,6 +74,20 @@
 					
 				</div>
 			</div>
+			
+		</div>
+		<div class="seccion-catalogo">
+			<h2>Accede a nuestro catálogo</h2>
+		</div>
+		<div class="catalogo">
+			<div class="catalogo__imagen">
+				<img src="../imagenes/mostrar-catalogo.jpg">
+				<div class="catalogo__boton">
+				  <p>MIRAR CATÁLOGO</p>
+			  </div>
+			</div>
+			
+			
 			
 		</div>
 	</main>
