error de catalogo solucionado con margin

--- a/html/index.html
+++ b/html/index.html
@@ -83,8 +83,9 @@
 		<div class="catalogo">
 			<div class="catalogo__imagen-con-boton">
 				<img src="../imagenes/mostrar-catalogo.jpg">
-				<div class="catalogo__boton-contenedor">
-					<div class="catalogo__boton"><p>MIRAR CATÁLOGO</p></div>
+				<div class="catalogo__boton"><p>MIRAR CATÁLOGO</p></div>
+				<!--<div class="catalogo__boton-contenedor">-->
+					
 				  
 			  </div>
 			</div>
