correcion 1 de seccion sobre nosotros

--- a/html/index.html
+++ b/html/index.html
@@ -106,8 +106,8 @@
 		</div>
 		<div class="footer-texto">
 			<p>
-				Somos dos estudiantes de ingeniería de Sistemas y hemos diseñado esta página con fines académicos, a fin de presentar
-				un proyecto final para la materia le lógica y algoritmia. 
+				Somos dos estudiantes de ingeniería de Sistemas y hemos diseñado esta página con fines académicos. Nuestro objetivo es presentar
+				la página web como proyecto final para la materia le lógica y algoritmia. 
 		  </p>
 		  <p>Para el desarrollo de la página hemos utilizado HTML, CSS y Javascript</p>
 		</div>
