segunda correcion apartado sobre nosotros

--- a/html/index.html
+++ b/html/index.html
@@ -109,7 +109,7 @@
 				Somos dos estudiantes de ingeniería de Sistemas y hemos diseñado esta página con fines académicos. Nuestro objetivo es presentar
 				la página web como proyecto final para la materia le lógica y algoritmia. 
 		  </p>
-		  <p>Para el desarrollo de la página hemos utilizado HTML, CSS y Javascript</p>
+		  <p>En el desarrollo de la página hemos utilizado HTML, CSS y Javascript</p>
 		</div>
 		<div class="footer-logo-universidad-contenedor">
 			<div class="footer-logo-universidad">
