cuarta correcion de texto en sobre nosotros

--- a/html/index.html
+++ b/html/index.html
@@ -106,10 +106,10 @@
 		</div>
 		<div class="footer-texto">
 			<p>
-				Somos dos estudiantes de ingeniería de Sistemas y hemos diseñado esta página con fines académicos. Nuestro objetivo es presentar
-				la página web como proyecto final para la materia le lógica y algoritmia. 
+				Somos dos estudiantes de Ingeniería de Sistemas y hemos diseñado esta página con fines académicos. Nuestro objetivo es presentar
+				la página web como proyecto final para la materia de lógica y algoritmia. 
 		  </p>
-		  <p>En el desarrollo de la página hemos utilizado HTML, CSS y Javascript</p>
+		  <p>En nuestro desarrollo hemos utilizado html, css y javascript</p>
 		</div>
 		<div class="footer-logo-universidad-contenedor">
 			<div class="footer-logo-universidad">
