--- a/html/index.html
+++ b/html/index.html
@@ -55,7 +55,7 @@
 				<img src="../imagenes/mostrar-catalogo.jpg">  
 			</div>
 			<div class="contenedor-boton">
-				<a href="javascript:ventana_catalogo('https://htmlpreview.github.io/?https://github.com/the-nett/proyecto-logica/blob/master/html/seccion-catalogo.html')">
+				<a href="seccion-catalogo.html" Target="_blank">
 					<div class="elemento-boton">
             <p>MIRAR CATÁLOGO</p>
         </div>
