segundo intento catalogo

--- a/html/seccion-catalogo.html
+++ b/html/seccion-catalogo.html
@@ -29,7 +29,7 @@
         		<div class="precio">
         			<p>$4.459.000</p>
         		</div>
-        		<div class="boton-comprar">
+        		<div class="boton-comprar" id="s22+">
         			<img src="../imagenes/icono-bolsa-compra.svg">
         		</div>
         	</div>
@@ -707,7 +707,7 @@
         		<div class="precio">
         			<p>$1.200.000</p>
         		</div>
-        		<div class="boton-comprar">
+        		<div class="boton-comprar" id="">
         			<img src="../imagenes/icono-bolsa-compra.svg">
         		</div>
         	</div>
@@ -744,6 +744,8 @@
 		
 	</div>
 
+	<script type="text/javascript" src="../javascript/seccion-catalogo.js"></script>
 
+ 
 </body>
 </html>
