--- a/proyecto-logica/html/seccion-catalogo.html
+++ b/proyecto-logica/html/seccion-catalogo.html
@@ -26,10 +26,9 @@
 			</div>
 		</nav>
 	</header>
-    <div id ="slide" class ="slide"> 
-        <div class = "lista-articulos" id  ="lista-articulos"></div>
-        <button name = "calcular" id = "calc">Calcular pedido</button>
-    </div>
+	<div class="slide" id="slide">
+		<p>dkcjcj</p>
+	</div>
 	<div class="contenedor-catalogo">
 
 	<div class="marca">
@@ -38,16 +37,16 @@
 		</div>
 	</div>
 	 <div class="contenedor-productos-samsung">
-        <article class="portada-articulo" >
-			<div class="portada-articulo__nombre-celular" id="s22+_nombre">
+        <article class="portada-articulo">
+			<div class="portada-articulo__nombre-celular">
 				<h3>Samsung Galaxy S22+</h3>
 			</div>
         	<div class="imagen-articulo">
         		<img src="../imagenes/catalogo-samsung/galaxy-s22+.webp">
         	</div>
         	<div class="precio-y-boton">
-        		<div class="precio" id="s22_precio">
-        			COP: $4459000 
+        		<div class="precio">
+        			<p>$4.459.000</p>
         		</div>
         		<div class="boton-comprar" id="s22+">
         			<img src="../imagenes/icono-bolsa-compra.svg">
@@ -81,19 +80,18 @@
 					</div>	
 				</div>
         	</div>
-        </article> 
-        
+        </article>
 
-        <article class="portada-articulo" >
+        <article class="portada-articulo">
 			<div class="portada-articulo__nombre-celular">
 				<h3>Galaxy S22 Ultra</h3>
 			</div>
         	<div class="imagen-articulo">
         		<img src="../imagenes/catalogo-samsung/galaxy-s22-ultra.webp">
         	</div>
-        	<div class="precio-y-boton" id="s22-ultra">
+        	<div class="precio-y-boton">
         		<div class="precio">
-        		COP: $5469900
+        			<p>$5.469.900</p>
         		</div>
         		<div class="boton-comprar">
         			<img src="../imagenes/icono-bolsa-compra.svg">
@@ -135,9 +133,9 @@
         	<div class="imagen-articulo">
         		<img src="../imagenes/catalogo-samsung/galaxy-s21-fe.webp">
         	</div>
-        	<div class="precio-y-boton" id="s21">
+        	<div class="precio-y-boton">
         		<div class="precio">
-        		COP: $2620900
+        			<p>$2.620.900</p>
         		</div>
         		<div class="boton-comprar">
         			<img src="../imagenes/icono-bolsa-compra.svg">
@@ -174,16 +172,16 @@
         	</div>
         </article>
 
-                <article class="portada-articulo" >
+                <article class="portada-articulo">
 			<div class="portada-articulo__nombre-celular">
 				<h3>Galaxy Note 20 Ultra</h3>
 			</div>
         	<div class="imagen-articulo">
         		<img src="../imagenes/catalogo-samsung/galaxy-note-20-ultra.webp">
         	</div>
-        	<div class="precio-y-boton" id="note20">
+        	<div class="precio-y-boton">
         		<div class="precio">
-                    COP: $3947000
+        			<p>$3.947.000</p>
         		</div>
         		<div class="boton-comprar">
         			<img src="../imagenes/icono-bolsa-compra.svg">
@@ -221,16 +219,16 @@
         </article>
 
                 
-        <article class="portada-articulo" >
+        <article class="portada-articulo">
 			<div class="portada-articulo__nombre-celular">
 				<h3>Samsung Galaxy A52 5G</h3>
 			</div>
         	<div class="imagen-articulo">
         		<img src="../imagenes/catalogo-samsung/galaxy-a52.webp">
         	</div>
-        	<div class="precio-y-boton" id="A52">
+        	<div class="precio-y-boton">
         		<div class="precio">
-                    COP: $1118500
+        			<p>$1.118.447</p>
         		</div>
         		<div class="boton-comprar">
         			<img src="../imagenes/icono-bolsa-compra.svg">
@@ -266,16 +264,16 @@
         	</div>
         </article>
 
-        <article class="portada-articulo" >
+        <article class="portada-articulo">
 			<div class="portada-articulo__nombre-celular">
 				<h3>Samsung Galaxy A51 5G</h3>
 			</div>
         	<div class="imagen-articulo">
         		<img src="../imagenes/catalogo-samsung/galaxi-a51.jpg">
         	</div>
-        	<div class="precio-y-boton" id="samsung_A51">
-        		<div class="precio" >
-                   COP: $1226900
+        	<div class="precio-y-boton">
+        		<div class="precio">
+        			<p>1.226.900</p>
         		</div>
         		<div class="boton-comprar">
         			<img src="../imagenes/icono-bolsa-compra.svg">
@@ -324,9 +322,9 @@
         	<div class="imagen-articulo">
         		<img src="../imagenes/catalogo-apple/iphone-13promax.webp">
         	</div>
-        	<div class="precio-y-boton" id="i13">
+        	<div class="precio-y-boton">
         		<div class="precio">
-                   COP: $5499900
+        			<p>$5.499.900</p>
         		</div>
         		<div class="boton-comprar">
         			<img src="../imagenes/icono-bolsa-compra.svg">
@@ -368,9 +366,9 @@
         	<div class="imagen-articulo">
         		<img src="../imagenes/catalogo-apple/iphone-12pro.webp">
         	</div>
-        	<div class="precio-y-boton" id="i12">
+        	<div class="precio-y-boton">
         		<div class="precio">
-                   COP: $4459900
+        			<p>$4.459.900</p>
         		</div>
         		<div class="boton-comprar">
         			<img src="../imagenes/icono-bolsa-compra.svg">
@@ -413,9 +411,9 @@
         	<div class="imagen-articulo">
         		<img src="../imagenes/catalogo-apple/iphone-11.webp">
         	</div>
-        	<div class="precio-y-boton" id="i11">
+        	<div class="precio-y-boton">
         		<div class="precio">
-                   COP: $2715900
+        			<p>$2.715.900</p>
         		</div>
         		<div class="boton-comprar">
         			<img src="../imagenes/icono-bolsa-compra.svg">
@@ -456,9 +454,9 @@
         	<div class="imagen-articulo">
         		<img src="../imagenes/catalogo-apple/iphone-xs.webp">
         	</div>
-        	<div class="precio-y-boton" id="ixs">
+        	<div class="precio-y-boton">
         		<div class="precio">
-                   COP: $2800000
+        			<p>$2.800.000</p>
         		</div>
         		<div class="boton-comprar">
         			<img src="../imagenes/icono-bolsa-compra.svg">
@@ -501,16 +499,16 @@
 		</div>
 	</div>
 	<div class="contenedor-productos-huawei">
-		<article class="portada-articulo" >
+		<article class="portada-articulo">
 			<div class="portada-articulo__nombre-celular">
 				<h3>P50 pro</h3>
 			</div>
         	<div class="imagen-articulo">
         		<img src="../imagenes/catalogo-huawei/p50-pro.jpg">
         	</div>
-        	<div class="precio-y-boton" id="P50">
+        	<div class="precio-y-boton">
         		<div class="precio">
-                   COP: $5200000
+        			<p>$5.200.000</p>
         		</div>
         		<div class="boton-comprar">
         			<img src="../imagenes/icono-bolsa-compra.svg">
@@ -552,9 +550,9 @@
         	<div class="imagen-articulo">
         		<img src="../imagenes/catalogo-huawei/mate-40pro.webp">
         	</div>
-        	<div class="precio-y-boton" id="M40p">
+        	<div class="precio-y-boton">
         		<div class="precio">
-                   COP: $4996900
+        			<p>$4.996.813</p>
         		</div>
         		<div class="boton-comprar">
         			<img src="../imagenes/icono-bolsa-compra.svg">
@@ -590,16 +588,16 @@
         	</div>
         </article>
 
-        <article class="portada-articulo" >
+        <article class="portada-articulo">
 			<div class="portada-articulo__nombre-celular">
 				<h3>P40 pro</h3>
 			</div>
         	<div class="imagen-articulo">
         		<img src="../imagenes/catalogo-huawei/p40pro.webp">
         	</div>
-        	<div class="precio-y-boton" id="P40p">
+        	<div class="precio-y-boton">
         		<div class="precio">
-                   COP: $5199000
+        			<p>$5.199.000</p>
         		</div>
         		<div class="boton-comprar">
         			<img src="../imagenes/icono-bolsa-compra.svg">
@@ -633,17 +631,16 @@
 					</div>	
 				</div>
         	</div>
-        </article>
-        <article class="portada-articulo" >
+        </article><article class="portada-articulo">
 			<div class="portada-articulo__nombre-celular">
 				<h3>P40 lite</h3>
 			</div>
         	<div class="imagen-articulo">
         		<img src="../imagenes/catalogo-huawei/p40lite.webp">
         	</div>
-        	<div class="precio-y-boton" id="P40l">
+        	<div class="precio-y-boton">
         		<div class="precio">
-        			COP: $3256000
+        			<p>$3.256.000</p>
         		</div>
         		<div class="boton-comprar">
         			<img src="../imagenes/icono-bolsa-compra.svg">
@@ -676,18 +673,16 @@
 					</div>	
 				</div>
         	</div>
-        </article>
-
-        <article class="portada-articulo" >
+        </article><article class="portada-articulo">
 			<div class="portada-articulo__nombre-celular">
-				<h3>Y9S</h3>
+				<h3>Nombre del celular</h3>
 			</div>
         	<div class="imagen-articulo">
         		<img src="../imagenes/catalogo-huawei/y9s.webp">
         	</div>
-        	<div class="precio-y-boton" id="Y9S">
+        	<div class="precio-y-boton">
         		<div class="precio">
-        			COP: $1099000
+        			<p>$1.099.000</p>
         		</div>
         		<div class="boton-comprar">
         			<img src="../imagenes/icono-bolsa-compra.svg">
@@ -720,17 +715,16 @@
 					</div>	
 				</div>
         	</div>
-        </article>
-        <article class="portada-articulo" >
+        </article><article class="portada-articulo">
 			<div class="portada-articulo__nombre-celular">
 				<h3>P30 lite</h3>
 			</div>
         	<div class="imagen-articulo">
         		<img src="../imagenes/catalogo-huawei/p30lite.webp">
         	</div>
-        	<div class="precio-y-boton" id="P30l">
+        	<div class="precio-y-boton">
         		<div class="precio">
-        			COP: $1200000
+        			<p>$1.200.000</p>
         		</div>
         		<div class="boton-comprar" id="">
         			<img src="../imagenes/icono-bolsa-compra.svg">
