subi-archivos de usb

--- a/html/index.html
+++ b/html/index.html
@@ -66,7 +66,7 @@
 				<img src="../imagenes/mostrar-catalogo.jpg">  
 			</div>
 			<div class="contenedor-boton">
-				<a href="seccion-catalogo.html" Target="_blank">
+				<a href="seccion-catalogo.html">
 					<div class="elemento-boton">
             <p>MIRAR CATÁLOGO</p>
         </div>
@@ -87,8 +87,9 @@
 		<div class="footer-texto">
 			<p>
 				Somos dos estudiantes de Ingeniería de Sistemas y hemos diseñado esta página con fines académicos. Nuestro objetivo es presentar
-				la página web como proyecto final para la materia de lógica y algoritmia. 
+				como proyecto final para la materia de lógica y algoritmia un catálogo web que genere la factura del usuario.
 		  </p>
+		  <br>
 		  <p>En nuestro desarrollo hemos utilizado html, css y javascript</p>
 		</div>
 		<div class="footer-logo-universidad-contenedor">
