--- a/html/seccion-catalogo.html
+++ b/html/seccion-catalogo.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Catalogo</title>
-    <link rel="icon" href="../imagenes/icono-logo.jpg"/> <!-- cambiar icono -->
+    <link rel="icon" href="../imagenes/icono-logo.jpg"/> 
     <link rel="stylesheet" type="text/css" href="../css/normalize.css">
     <link rel="stylesheet" type="text/css" href="../css/seccion-catalogo.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -22,14 +22,15 @@
 				    <div class = "header__boton-carrito" id="boton-carrito">
 					    <img src="../imagenes/icono-carrito-de-compra.svg">
 			            </div>
+			        </div>
 			    </div>
-			</div>
+        <div id ="slide" class ="slide"> 
+            <div class = "lista-articulos" id  ="lista-articulos"></div>
+            <button name = "calcular" id = "calc">Calcular pedido</button>
+       </div>
 		</nav>
 	</header>
-    <div id ="slide" class ="slide"> 
-        <div class = "lista-articulos" id  ="lista-articulos"></div>
-        <button name = "calcular" id = "calc">Calcular pedido</button>
-    </div>
+    
 	<div class="contenedor-catalogo">
 
 	<div class="marca">
