--- a/html/index.html
+++ b/html/index.html
@@ -66,7 +66,7 @@
 				<img src="../imagenes/mostrar-catalogo.jpg">  
 			</div>
 			<div class="contenedor-boton">
-				<a href="seccion-catalogo.html">
+				<a href="seccion-catalogo.html" target="_blank">
 					<div class="elemento-boton">
             <p>MIRAR CATÁLOGO</p>
         </div>
